--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -220,7 +220,7 @@
       </div>
       {% endfor %} {% endif %} {% endwith %} {% block content %}{% endblock %}
       <a
-        href="https://wa.me/0750423987?text=Hello%21%20I%20would%20like%20to%20discuss%20a%20potential%20collaboration.%20Thank%20you%21%20%F0%9F%99%8F"
+        href="https://wa.me/+40750423987?text=Hello%21%20I%20would%20like%20to%20discuss%20a%20potential%20collaboration.%20Thank%20you%21%20%F0%9F%99%8F"
         target="_blank"
         rel="noopener noreferrer"
         aria-label="Open WhatsApp chat"
