--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -165,7 +165,7 @@
         class="container mx-auto px-4 flex flex-wrap items-center justify-between"
       >
         <h1 class="text-3xl glow font-bold">
-          <a href="/" class="block px-2 py-1 nav-link">Alx.dev</a>
+          <a href="/" class="block px-2 py-1 nav-link">Digital Cyber</a>
         </h1>
         <button
           id="nav-toggle"
