--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -104,7 +104,7 @@
         </svg>
         <div>
           <p class="font-semibold text-gray-300">Email</p>
-          <a href="mailto:alexpopwebdev@gmail.com" class="text-cyan-500 hover:underline">Message me</a>
+          <a href="mailto:contact@digitalcyber.digital" class="text-cyan-500 hover:underline">digitalcyber.digital</a>
         </div>
       </div>
     </div>
@@ -115,7 +115,7 @@
         </svg>
         <div>
           <p class="font-semibold text-gray-300">LinkedIn</p>
-          <a href="https://www.linkedin.com/in/alexandru-popica-827902231" target="_blank" class="text-cyan-500 hover:underline">Alexandru Popica</a>
+          <a href="https://www.linkedin.com/in/alexandru-popica-827902231" target="_blank" class="text-cyan-500 hover:underline">Digital Cyber</a>
         </div>
       </div>
     </div>
@@ -138,7 +138,7 @@
   <div
     class="max-w-6xl mx-auto px-4 flex flex-col md:flex-row justify-between items-center space-y-4 md:space-y-0"
   >
-    <p class="text-gray-400">© 2025 Alx.dev. All rights reserved.</p>
+    <p class="text-gray-400">© 2025 Digital Cyber. All rights reserved.</p>
     <div class="flex space-x-4">
       <a
         href="https://www.linkedin.com/in/alexandru-popica-827902231?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
