--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -262,7 +262,7 @@
   <div
     class="max-w-6xl mx-auto px-4 flex flex-col md:flex-row justify-between items-center space-y-4 md:space-y-0"
   >
-    <p class="text-gray-400">© 2025 Alx.dev. All rights reserved.</p>
+    <p class="text-gray-400">© 2025 Digital Cyber. All rights reserved.</p>
     <div class="flex space-x-4">
       <a
         href="https://www.linkedin.com/in/alexandru-popica-827902231?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
