--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block title %}Home{% endblock %} {% block content
+{% extends 'base.html' %} {% block title %}Digital Cyber{% endblock %} {% block content
 %}
 <!-- Hero Banner with Three.js canvas -->
 <section class="text-center mb-12" data-aos="fade-up">
